--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,6 @@
         "php": "~5.5 || ^7.0"
     },
     "autoload": {
-        "psr-4": {"Requtize\\CoreTimer\\": "src/CoreTimer/"}
+        "psr-4": {"Requtize\\CodeTimer\\": "src/CodeTimer/"}
     }
 }
