--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         }
     ],
     "require": {
-        "php": "~5.5 || ^7.0 || ~8.0"
+        "php": "~5.5 || ^7.0 || ~8.0 || ^8.3"
     },
     "autoload": {
         "psr-4": {"Requtize\\CodeTimer\\": "src/CodeTimer/"}
