--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "requtize/code-timer",
+    "name": "eugeneuk/code-timer",
     "type": "library",
     "description": "Simple PHP library to measuring code execution time with memory usage.",
     "keywords": ["measuring","time","benchmark"],
@@ -16,6 +16,6 @@
         "php": "~5.5 || ^7.0 || ~8.0 || ^8.3"
     },
     "autoload": {
-        "psr-4": {"Requtize\\CodeTimer\\": "src/CodeTimer/"}
+        "psr-4": {"Eugeneuk\\CodeTimer\\": "src/CodeTimer/"}
     }
 }
